# Software-Rasterizer

./: Cargo.toml  README.md
src/: main.rs
src/assets/: Cube.bbmodel  Cube.mtl  DirtBlock.aseprite  Floor.bbmodel  SmallWorld.bbmodel  SmallWorld.mtl  Smallworldtexture.aseprite  color.aseprite  floortexture.aseprite
src/core/: engine.rs  input.rs  mod.rs  resource_helper.rs
src/engine/: engine.rs
src/math/: mathf.rs  mathi.rs  mod.rs
src/math/numerics/: float2.rs  float3.rs  float4.rs  int2.rs  int3.rs  int4.rs  mod.rs  uint2.rs  uint3.rs  uint4.rs
src/rasterizer/: camera.rs  mod.rs  rasterizer.rs  rasterizer_model.rs  rasterizer_point.rs  render_target.rs
src/rasterizer/tiling/: binning.rs  mod.rs  tile.rs  triangle_ref.rs
src/scenes/: test_scene.rs
src/shaders/: lit_texture_shader.rs  mod.rs  shader_base.rs  texture_shader.rs  transparent_texture_shader.rs
src/types/: mesh.rs  mod.rs  model.rs  rasterizer_model.rs  rasterizer_point.rs  scene.rs  texture.rs  transform.rs
src/types/traits/: fragment_shader.rs  mod.rs
