[package]
name = "rasterizer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
minifb = "0.28.0"
once_cell = "1.21.3"
rand = "0.9.2"
rayon = "1.11.0"

[profile.release]
opt-level = 3  # "3" für maximale Geschwindigkeit, "z" für kleine Binärgröße
lto = true       # Link-Time Optimization
codegen-units = 1